--- a/404.md
+++ b/404.md
@@ -1,28 +1,29 @@
 ---
 permalink: /404.html
 ---
-<!DOCTYPE html><html lang="ru"><head>
-  <meta charset="utf-8">
-  <title>Памятники</title>
-  <base href="https://vo1okon.github.io/monuments/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-<style>@import"https://fonts.googleapis.com/css2?family=Roboto&display=swap";html{margin:0;padding:0;font-family:Roboto,sans-serif;min-height:100vh;color:#fff;background:rgb(153,0,111);background:linear-gradient(0deg,rgba(153,0,111,1) 0%,rgba(153,0,182,1) 100%)}</style><link rel="stylesheet" href="styles.1e55a8432318f940.css" media="print" onload="this.media='all'"><noscript><link rel="stylesheet" href="styles.1e55a8432318f940.css"></noscript></head>
-<body>
-  <app-root></app-root>
-  <script>
-    (function () {
-      // Retrieve the URL the user was trying to access when receiving the 404.
-      var redirect = sessionStorage.redirect;
-      // Remove the URL from sessionStorage.
-      delete sessionStorage.redirect;
-      // Check if we actually need to redirect.
-      if (redirect && redirect != location.href) {
-        // We need to redirect to the URL the user was trying to access.
-        history.replaceState(null, null, redirect);
-      }
-    })();
-  </script>
-<script src="runtime.34ceac9f9491cbd1.js" type="module"></script><script src="polyfills.ba1ed39a9931ee95.js" type="module"></script><script src="main.2f7bef1f2e17c5a4.js" type="module"></script>
+<!DOCTYPE html>
+<html lang="en">
 
-</body></html>
+<head>
+  <meta charset="utf-8" />
+
+  <title>Match your application's title</title>
+
+  <script>
+    // Store the URL the user was trying to access when receiving the 404.
+    sessionStorage.redirect = location.href;
+  </script>
+
+  <!-- Immediately redirect to the base URL so we can use the SPA routing. -->
+  <meta http-equiv="refresh" content="0;URL='/'"></meta>
+</head>
+
+<body>
+<!-- IE required at least 512 bytes of data to show non-default 404. -->
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+</body>    
+            
+             
+</body>
