--- a/404.md
+++ b/404.md
@@ -2,3 +2,8 @@
 permalink: /404.html
 ---
 please return to this page
+<script>
+    // Store the URL the user was trying to access when receiving the 404.
+    sessionStorage.redirect = location.href;
+  </script>
+  <meta http-equiv="refresh" content="0;URL='/'"></meta>
